--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
     "prepare": "npm run dist",
     "updateVersion": "webpack --env joplin-plugin-config=updateVersion",
     "update": "npm install -g generator-joplin && yo joplin --node-package-manager npm --update",
-    "run": "flatpak run net.cozic.joplin_desktop --env dev"
+    "app": "flatpak run net.cozic.joplin_desktop --env dev"
   },
   "license": "MIT",
   "keywords": [
